--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,7 @@ body {
 .gradient {
     padding: 20px;
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     display: flex;
     justify-content: center;
     align-items: center;
