--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,7 @@ body {
     height: 100dvh;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     background: #ee9ca7;
     background: -webkit-linear-gradient(to bottom, #ffdde1, #ee9ca7);
     background: linear-gradient(to bottom, #ffdde1, #f3b2bb, #ee9ca7);
