--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,10 @@ body {
     font-family: 'Kanit', sans-serif;
 }
 
+.h-custom {
+    height: 100dvh;
+}
+
 .gradient {
     padding: 20px;
     width: 100vw;
