--- a/src/page/console/console.scss
+++ b/src/page/console/console.scss
@@ -31,5 +31,5 @@
 
 :host ::ng-deep .p-dialog {
     border: 3px solid #ff8800;
-    background: url('/image/green.jpg') no-repeat center center;
+    background: url('/image/green-lg.jpg') no-repeat center center;
 }
