--- a/src/page/console/console.scss
+++ b/src/page/console/console.scss
@@ -1,34 +1,17 @@
-.game-btn {
-    font-size: 1.5rem;
-    color: white;
-    border: 6px solid transparent;
-    border-radius: 2rem;
-    font-weight: bold;
-    padding: 0.75rem 5rem;
-    cursor: pointer;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.75);
-    background: linear-gradient(to bottom, #e63946, #b71c1c) padding-box,
-        linear-gradient(to bottom, #ffcc00, #ff8800) border-box;
-    box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.3),
-        0 6px 12px rgba(0, 0, 0, 0.4);
-}
-
 .custom-border {
-    border: 4px solid #ffcc00;
-    border-radius: 1rem;
     height: calc(100% - 8rem);
 }
 
 .custom-card {
-    color: white;
-    border: 3px solid #ff8800;
+    background: #8e9eab;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to bottom left , #f7f7f9, #bec4cb);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom left, #f7f7f9, #bec4cb);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 :host ::ng-deep .p-tag {
     padding: 0.125rem 1.25rem;
-}
-
-:host ::ng-deep .p-dialog {
-    border: 3px solid #ff8800;
-    // background: url('/image/green.jpg') no-repeat center center;
 }
