--- a/src/page/console/console.scss
+++ b/src/page/console/console.scss
@@ -3,13 +3,12 @@
 }
 
 .custom-card {
-    background: #8e9eab;
+    background: #457fca;
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to bottom left , #f7f7f9, #bec4cb);
+    background: -webkit-linear-gradient(to right, #5691c8, #85afe6);
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to bottom left, #f7f7f9, #bec4cb);
+    background: linear-gradient(to right, #5691c8, #85afe6);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
 }
 
 :host ::ng-deep .p-tag {
